# skillnavigator

./: .env.example  .firebaserc  README.md  START.md  compose.yml  diff.txt  firestore.rules  package-lock.json  postcss.config.js  pyproject.toml  webpack.config.js
client/: .env.development  .env.production  .gitignore  change.md  dockerfile  firebase_prep.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/.next/types/app/: page.ts
client/src/: firebase.ts
client/src/app/: globals.css  page.tsx
client/src/components/: CheckoutButton.tsx  SignUpButton.tsx  signup_main.tsx
client/src/pages/: CheckoutButton.tsx  Planning.tsx  ProductTest.tsx  firebase.tsx  get-plan.tsx  index.tsx  learning-record.tsx  signup.tsx  start.tsx  user-setting.tsx
client/src/styles/: globals.css  hamburger.module.css  tailwind.module.css
docs/: api_plan.md
server/: .env.development  .env.production  .gitignore  README.md  alembic.ini  dockerfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0b04a77e991f_initial_migration.py  2946053dc67b_initial_migration.py  42248ae4015d_initial_migration.py  5b9e0d6b5fe8_initial_migration.py  6363f12e1698_initial_migration.py  76cd9bedfcba_initial_migration.py  a93bae487c6b_initial_migration.py  b9bf7ebdb36e_initial_migration.py  bd45633ec089_initial_migration.py  d2dc45cd6168_initial.py  f2d31025c847_initial_migration.py  f74dc175abfb_initial_migration.py
server/app/: closs-origin-opener-file.py  crud.py  main.py  main1.py  main2.py  models.py  schemas.py
(+23 files in other folders)
