[tool.poetry]
name = "skillnavigator"
version = "0.1.0"
description = ""
authors = ["misaho <pualanilea@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
openai = "^1.6.0"
requests = "^2.31.0"
langchain = "^0.0.352"
httpx = "^0.26.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


